REFORMAT: whole project structure. Splitted into one project for each service. Also cleaned python/csv/md files and put them into the utils folder